build: downgrade to java 17